--- a/CODE-RajulShakywar/CODE/multi-gpu/train_mlm_job.yml
+++ b/CODE-RajulShakywar/CODE/multi-gpu/train_mlm_job.yml
@@ -10,7 +10,7 @@ spec:
         - name: job-mlm-model-train-container
           image: gitlab-registry.nrp-nautilus.io/gp-engine/jupyter-stacks/bigdata-2023:latest
           workingDir: /data
-          command: ["sh", "-c", "bash run_install.sh && python3 train_mlm.py -train 100000 -test 10000 -ngpu 1 -logfile logfile-may19_gpu1.log"]
+          command: ["sh", "-c", "bash run_install.sh && python3 train_mlm.py -train 100000 -test 10000 -ngpu {number_of_gpus} -logfile logfile-may19_gpu1.log"]
           volumeMounts:
             - name: pvc-gp-engine-unoselab01
               mountPath: /data
@@ -18,12 +18,12 @@ spec:
             limits:
               memory: 49Gi
               cpu: "8"
-              nvidia.com/gpu: 1
+              nvidia.com/gpu: {number_of_gpus}
               ephemeral-storage: 48Gi
             requests:
               memory: 49Gi
               cpu: "8"
-              nvidia.com/gpu: 1
+              nvidia.com/gpu: {number_of_gpus}
               ephemeral-storage: 48Gi
           securityContext:
             allowPrivilegeEscalation: false
