--- a/CODE-SPT-Code/workspace-eclipse/sptcode_astparser/build.xml
+++ b/CODE-SPT-Code/workspace-eclipse/sptcode_astparser/build.xml
@@ -87,6 +87,11 @@
         <path refid="sptcode_astparser.classpath"/>
         <pathelement location="../commons-text-1.12.0.jar"/>
     </path>
+    <path id="run.MainSimilarity.classpath">
+        <path refid="Plug-in Dependencies.libraryclasspath"/>
+        <path refid="sptcode_astparser.classpath"/>
+        <pathelement location="../commons-text-1.12.0.jar"/>
+    </path>
     <target name="init">
         <mkdir dir="bin"/>
         <copy includeemptydirs="false" todir="bin">
@@ -161,6 +166,11 @@
     <target name="MainSim">
         <java classname="MainSim" failonerror="true" fork="yes">
             <classpath refid="run.MainSim.classpath"/>
+        </java>
+    </target>
+    <target name="MainSimilarity">
+        <java classname="MainSimilarity" failonerror="true" fork="yes">
+            <classpath refid="run.MainSimilarity.classpath"/>
         </java>
     </target>
 </project>
