adding new files

--- a/CODE-SPT-Code/workspace-eclipse/sptcode_astparser/bin/.gitignore
+++ b/CODE-SPT-Code/workspace-eclipse/sptcode_astparser/bin/.gitignore
@@ -1,10 +1,2 @@
-/pred$MethodNameVisitor.class
-/prj_similarity/
-
-/SimilarityScoreCounter.class
-/similaritythreshold.class
-/DetailedSimilarityScoreCounter.class
-/backup/
-/pred2$MethodNameVisitor.class
-/pred2.class
-/DetailedHighSimilarityFilter.class
+/UtilFile.class
+/binarysearchreference$1.class
