--- a/CODE-SPT-Code/workspace-eclipse/sptcode_astparser/bin/.gitignore
+++ b/CODE-SPT-Code/workspace-eclipse/sptcode_astparser/bin/.gitignore
@@ -1,2 +1,7 @@
 /UtilFile.class
 /binarysearchreference$1.class
+/BinarySearch.class
+/BinarySearchReference$1.class
+/BinarySearchReference.class
+/ExactMatch.class
+/exactmatch.class
