--- a/CODE-SPT-Code/workspace-eclipse/sptcode_astparser/.project
+++ b/CODE-SPT-Code/workspace-eclipse/sptcode_astparser/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>sptcode_astparser</name>
+	<name>sptcode_astparser01</name>
 	<comment></comment>
 	<projects>
 	</projects>
