--- a/CODE-SPT-Code/workspace-eclipse/sptcode_astparser/.classpath
+++ b/CODE-SPT-Code/workspace-eclipse/sptcode_astparser/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/commons-text-1.12.0.jar"/>
+	<classpathentry kind="lib" path="E:/json-simple-1.1.1.jar/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
