--- a/CODE-SPT-Code/.gitignore
+++ b/CODE-SPT-Code/.gitignore
@@ -147,6 +147,8 @@ sources/data/asts/vendor/tree-sitter-javascript
 sources/data/asts/vendor/tree-sitter-php
 sources/data/asts/vendor/tree-sitter-python
 sources/data/asts/vendor/tree-sitter-ruby
+sources/data/asts/antlr_parsers
+
 
 # csv
 *.csv
