--- a/CODE-SPT-Code/workspace-eclipse/sptcode_astparser/.classpath
+++ b/CODE-SPT-Code/workspace-eclipse/sptcode_astparser/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/commons-text-1.12.0.jar"/>
 	<classpathentry kind="lib" path="E:/json-simple-1.1.1.jar/json-simple-1.1.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
