--- a/kube/LLM-AST/2-kube-pod-llm-ast.yml
+++ b/kube/LLM-AST/2-kube-pod-llm-ast.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: shradha-llmast-gp-engine-unoselab01-pod
+  name: shradha-llmast-gp-engine-unoselab01-pod01
 spec:
   automountServiceAccountToken: false
   affinity:
@@ -19,10 +19,10 @@ spec:
     command: ["sh", "-c", "echo 'Im a new pod' && sleep infinity"]
     resources:
       limits:
-        memory: 12Gi
+        memory: 16Gi #12Gi
         cpu: 2
       requests:
-        memory: 10Gi
+        memory: 16Gi #10Gi
         cpu: 2
     volumeMounts:
     - mountPath: /data
