--- a/kube/LLM-AST/3-kube-job-llm-ast-v2.yml
+++ b/kube/LLM-AST/3-kube-job-llm-ast-v2.yml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: job04-llmast-shradha-gp-engine-unoselab01
+  name: job05-llmast-shradha-gp-engine-unoselab01
 spec:
   ttlSecondsAfterFinished: 86400 # a day
   template:
@@ -11,12 +11,10 @@ spec:
           image: gitlab-registry.nrp-nautilus.io/msong/research/env_mlm:v1
           workingDir: /data
           command: ["sh", "-c"]
-          args: 
-            - |
-              cd /data;
-              python -m venv old_version_env;
-              source old_version_env/bin/activate;
-              source activate old_version_env;
+          args: ["cd /data;
+              ls -la /data;
+              mamba create -y -n llmast_env;
+              source activate llmast_env;
               pip install scikit-learn==1.3.2 transformers==4.36.2 datasets==2.16.1 sentencepiece==0.1.99 sacremoses==0.1.1 accelerate==0.25.0 torch==2.1.2 torchvision==0.16.2 torchaudio==2.1.2 prettytable==3.10.0;
               pip install nltk psutil gputil dataclasses chardet rouge==1.0.0 typing antlr4-tools;
               conda install -c conda-forge tensorboard;
@@ -25,8 +23,9 @@ spec:
               pip check;
               pip install tree_sitter==0.21.0; 
               pip install antlr4-python3-runtime==4.9.2;
+              tar xf llm_ast_code.tar.gz;
               cd deploy-spt-code/spt-code/sources;
-              python main.py --do-pre-train --pre-train-tasks cap --batch-size 16 --eval-batch-size 32 --cuda-visible-devices 0,1,2,3,4,5,6,7 --fp16 --model-name pre_train --n-epoch 1 --n-epoch-pre-train 1 --task completion --remove-existing-saved-file pre_train:fine_tune --ast-type "jdt";
+              python main.py --do-pre-train --pre-train-tasks cap --batch-size 16 --eval-batch-size 32 --cuda-visible-devices 0,1,2,3 --fp16 --model-name pre_train --n-epoch 1 --n-epoch-pre-train 1 --task completion --remove-existing-saved-file pre_train:fine_tune --ast-type \"jdt\""]
           volumeMounts:
             - name: pvc-shradha-llmast-gp-engine-unoselab01
               mountPath: /data
@@ -34,12 +33,12 @@ spec:
             limits:
               memory: 32Gi
               cpu: "4"
-              nvidia.com/gpu: 8
+              nvidia.com/gpu: 4
               ephemeral-storage: 48Gi
             requests:
               memory: 32Gi
               cpu: "4"
-              nvidia.com/gpu: 8
+              nvidia.com/gpu: 4
               ephemeral-storage: 48Gi
           securityContext:
             allowPrivilegeEscalation: false
