--- a/kube/LLM-AST/1-kube-pvc-llm-ast.yml
+++ b/kube/LLM-AST/1-kube-pvc-llm-ast.yml
@@ -1,7 +1,19 @@
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: pvc-shradha-llmast-gp-engine-unoselab02
+# spec:
+#   storageClassName: rook-cephfs-central
+#   accessModes:
+#   - ReadWriteMany
+#   resources:
+#     requests:
+#       storage: 50Gi
+
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-shradha-llmast-gp-engine-unoselab01
+  name: pvc-shradha-llmast-gp-engine-unoselab03
 spec:
   storageClassName: rook-cephfs-central
   accessModes:
