--- a/kube/LLM-AST/3-kube-job-llm-ast.yml
+++ b/kube/LLM-AST/3-kube-job-llm-ast.yml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: job06-llmast-shradha-gp-engine-unoselab03
+  name: job14-llmast-shradha-gp-engine-unoselab03
 spec:
   ttlSecondsAfterFinished: 86400 # a day
   template:
@@ -23,9 +23,9 @@ spec:
               pip check;
               pip install tree_sitter==0.21.0; 
               pip install antlr4-python3-runtime==4.9.2;
-              tar xf llm_ast_code_gen_mid.tar.gz;
+              tar xf llm_asnongen_large_epoch_nojava.tar.gz;
               cd deploy-spt-code/spt-code/sources;
-              python main.py --do-pre-train --pre-train-tasks cap --batch-size 16 --eval-batch-size 32 --cuda-visible-devices 0,1,2,3,4,5,6,7 --fp16 --model-name pre_train --n-epoch 1 --n-epoch-pre-train 1 --task completion --remove-existing-saved-file pre_train:fine_tune --ast-type \"jdt\""]
+              python main.py --do-pre-train --pre-train-tasks cap --batch-size 32 --eval-batch-size 32 --cuda-visible-devices 0,1,2,3,4,5,6,7 --fp16 --model-name pre_train --n-epoch 10 --n-epoch-pre-train 10 --task completion --remove-existing-saved-file pre_train:fine_tune --ast-type \"jdt\""]
           volumeMounts:
             - name: pvc-shradha-llmast-gp-engine-unoselab03
               mountPath: /datasmall
@@ -33,12 +33,12 @@ spec:
             limits:
               memory: 48Gi
               cpu: "4"
-              nvidia.com/rtxa6000: 8
+              nvidia.com/rtxa6000: 8 #nvidia.com/gpu: 8
               ephemeral-storage: 48Gi
             requests:
               memory: 48Gi
               cpu: "4"
-              nvidia.com/rtxa6000: 8
+              nvidia.com/rtxa6000: 8 #nvidia.com/gpu: 8
               ephemeral-storage: 48Gi
           securityContext:
             allowPrivilegeEscalation: false
