--- a/kube/LLM-AST/test/3-kube-job-llm-ast-v2.yml
+++ b/kube/LLM-AST/test/3-kube-job-llm-ast-v2.yml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: job02-llmast-shradha-gp-engine-unoselab03
+  name: job18-llmast-shradha-gp-engine-unoselab02
 spec:
   ttlSecondsAfterFinished: 86400 # a day
   template:
@@ -9,10 +9,10 @@ spec:
       containers:
         - name: job-llmast-model-train-container
           image: gitlab-registry.nrp-nautilus.io/msong/research/env_mlm:v1
-          workingDir: /datasmall
+          workingDir: /data
           command: ["sh", "-c"]
-          args: ["cd /datasmall;
-              ls -la /datasmall;
+          args: ["cd /data;
+              ls -la /data;
               mamba create -y -n llmast_env;
               source activate llmast_env;
               pip install scikit-learn==1.3.2 transformers==4.36.2 datasets==2.16.1 sentencepiece==0.1.99 sacremoses==0.1.1 accelerate==0.25.0 torch==2.1.2 torchvision==0.16.2 torchaudio==2.1.2 prettytable==3.10.0;
@@ -23,37 +23,38 @@ spec:
               pip check;
               pip install tree_sitter==0.21.0; 
               pip install antlr4-python3-runtime==4.9.2;
-              tar xf llm_asnongen_large_epoch_nojava.tar.gz;
+              tar xf llm_asnongen_large_epoch.tar.gz;
               cd deploy-spt-code/spt-code/sources;
               python main.py --do-pre-train --pre-train-tasks cap --batch-size 32 --eval-batch-size 32 --cuda-visible-devices 0,1,2,3,4,5,6,7 --fp16 --model-name pre_train --n-epoch 10 --n-epoch-pre-train 10 --task completion --remove-existing-saved-file pre_train:fine_tune --ast-type \"jdt\""]
           volumeMounts:
-            - name: pvc-shradha-llmast-gp-engine-unoselab03
-              mountPath: /datasmall
+            - name: pvc-shradha-llmast-gp-engine-unoselab02
+              mountPath: /data
           resources:
             limits:
-              memory: 48Gi
+              memory: 32Gi
               cpu: "4"
-              nvidia.com/rtxa6000: 8 #nvidia.com/gpu: 8
+              nvidia.com/rtxa6000: 8
               ephemeral-storage: 48Gi
             requests:
-              memory: 48Gi
+              memory: 32Gi
               cpu: "4"
-              nvidia.com/rtxa6000: 8 #nvidia.com/gpu: 8
+              nvidia.com/rtxa6000: 8
               ephemeral-storage: 48Gi
           securityContext:
             allowPrivilegeEscalation: false
             runAsUser: 0
       volumes:
-        - name: pvc-shradha-llmast-gp-engine-unoselab03
+        - name: pvc-shradha-llmast-gp-engine-unoselab02
           persistentVolumeClaim:
-            claimName: pvc-shradha-llmast-gp-engine-unoselab03
+            claimName: pvc-shradha-llmast-gp-engine-unoselab02
       restartPolicy: Never
   backoffLimit: 1
+
 
 # apiVersion: batch/v1
 # kind: Job
 # metadata:
-#   name: job04-llmast-shradha-gp-engine-unoselab01
+#   name: job03-llmast-shradha-gp-engine-unoselab01
 # spec:
 #   ttlSecondsAfterFinished: 86400 # a day
 #   template:
@@ -64,12 +65,20 @@ spec:
 #           workingDir: /data
 #           command: ["sh", "-c"]
 #           args: ["cd /data;
-#               source activate env_mlm;
+#               ls -la /data;
+#               mamba create -y -n llmast_env;
+#               source activate llmast_env;
+#               pip install scikit-learn==1.3.2 transformers==4.36.2 datasets==2.16.1 sentencepiece==0.1.99 sacremoses==0.1.1 accelerate==0.25.0 torch==2.1.2 torchvision==0.16.2 torchaudio==2.1.2 prettytable==3.10.0;
+#               pip install nltk psutil gputil dataclasses chardet rouge==1.0.0 typing antlr4-tools;
 #               conda install -c conda-forge tensorboard;
-#               pip install psutil gputil dataclasses chardet rouge==1.0.0 typing antlr4-tools;
-#               pip install tree_sitter==0.19.0 antlr4-python3-runtime==4.9.2 nltk;
-#               cd /data/deploy-spt-code/spt-code/sources;
-#               python main.py --do-pre-train --pre-train-tasks cap --batch-size 16 --eval-batch-size 32 --cuda-visible-devices 0,1,2,3,4,5,6,7 --fp16 --model-name pre_train --n-epoch 1 --n-epoch-pre-train 1 --pre-train-subset-ratio 0.1 --parse-subset-ratio 0.01 --task completion --remove-existing-saved-file pre_train:fine_tune --ast-type \"jdt\""]
+#               pip install tensorboardX;
+#               pip show transformers torch;
+#               pip check;
+#               pip install tree_sitter==0.21.0; 
+#               pip install antlr4-python3-runtime==4.9.2;
+#               tar xf llm_ast_code_gen_large.tar.gz;
+#               cd deploy-spt-code/spt-code/sources;
+#               python main.py --do-pre-train --pre-train-tasks cap --batch-size 16 --eval-batch-size 32 --cuda-visible-devices 0,1,2,3,4,5,6,7 --fp16 --model-name pre_train --n-epoch 1 --n-epoch-pre-train 1 --task completion --remove-existing-saved-file pre_train:fine_tune --ast-type \"jdt\""]
 #           volumeMounts:
 #             - name: pvc-shradha-llmast-gp-engine-unoselab01
 #               mountPath: /data
