--- a/kube/LLM-AST/2-kube-pod-llm-ast.yml
+++ b/kube/LLM-AST/2-kube-pod-llm-ast.yml
@@ -12,7 +12,7 @@
 #           - key: topology.kubernetes.io/region
 #             operator: In
 #             values:
-#             - us-west
+#             - us-central
 #   containers:
 #   - name: pod-name-sso
 #     image: ubuntu:20.04
@@ -46,7 +46,7 @@ spec:
           - key: topology.kubernetes.io/region
             operator: In
             values:
-            - us-west #us-central
+            - us-central
   containers:
   - name: pod-name-sso
     image: ubuntu:20.04
