--- a/kube/LLM-AST/2-kube-pod-llm-ast.yml
+++ b/kube/LLM-AST/2-kube-pod-llm-ast.yml
@@ -35,7 +35,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: shradha-llmast-gp-engine-unoselab02-pod02
+  name: shradha-llmast-gp-engine-unoselab02-pod02-new-01
 spec:
   automountServiceAccountToken: false
   affinity:
@@ -59,9 +59,9 @@ spec:
         memory: 10Gi
         cpu: 2
     volumeMounts:
-    - mountPath: /datamid
-      name: data-shradha-llmast-gp-engine-unoselab02a
+    - mountPath: /datasmall
+      name: data-shra-llmast-gp-engine-unoselab02
   volumes:
-    - name: data-shradha-llmast-gp-engine-unoselab02a
+    - name: data-shra-llmast-gp-engine-unoselab02
       persistentVolumeClaim:
-        claimName: pvc-shradha-llmast-gp-engine-unoselab02a
+        claimName: pvc-shra-llmast-gp-engine-unoselab02
