--- a/kube/LLM-AST/3-kube-job-llm-ast-v2.yml
+++ b/kube/LLM-AST/3-kube-job-llm-ast-v2.yml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: job02-llmast-shradha-gp-engine-unoselab02
+  name: job03-llmast-shradha-gp-engine-unoselab02
 spec:
   ttlSecondsAfterFinished: 86400 # a day
   template:
@@ -9,10 +9,10 @@ spec:
       containers:
         - name: job-llmast-model-train-container
           image: gitlab-registry.nrp-nautilus.io/msong/research/env_mlm:v1
-          workingDir: /data
+          workingDir: /datamid
           command: ["sh", "-c"]
-          args: ["cd /data;
-              ls -la /data;
+          args: ["cd /datamid;
+              ls -la /datamid;
               mamba create -y -n llmast_env;
               source activate llmast_env;
               pip install scikit-learn==1.3.2 transformers==4.36.2 datasets==2.16.1 sentencepiece==0.1.99 sacremoses==0.1.1 accelerate==0.25.0 torch==2.1.2 torchvision==0.16.2 torchaudio==2.1.2 prettytable==3.10.0;
@@ -25,10 +25,10 @@ spec:
               pip install antlr4-python3-runtime==4.9.2;
               tar xf llm_ast_code_nongen_PR.tar.gz;
               cd deploy-spt-code/spt-code/sources;
-              python main.py --do-pre-train --pre-train-tasks cap --batch-size 64 --eval-batch-size 64 --cuda-visible-devices 0,1,2,3,4,5,6,7 --fp16 --model-name pre_train --n-epoch 1 --n-epoch-pre-train 1 --task completion --remove-existing-saved-file pre_train:fine_tune --ast-type \"jdt\" --dataset-size \"small\""]
+              python main.py --do-pre-train --pre-train-tasks cap --batch-size 64 --eval-batch-size 64 --cuda-visible-devices 0,1,2,3,4,5,6,7 --fp16 --model-name pre_train --n-epoch 1 --n-epoch-pre-train 1 --task completion --remove-existing-saved-file pre_train:fine_tune --ast-type \"jdt\" --dataset-size \"mid\""]
           volumeMounts:
-            - name: pvc-shradha-llmast-gp-engine-unoselab02
-              mountPath: /data
+            - name: pvc-shra-llmast-gp-engine-unoselab02
+              mountPath: /datamid
           resources:
             limits:
               memory: 32Gi
@@ -44,9 +44,9 @@ spec:
             allowPrivilegeEscalation: false
             runAsUser: 0
       volumes:
-        - name: pvc-shradha-llmast-gp-engine-unoselab02
+        - name: pvc-shra-llmast-gp-engine-unoselab02
           persistentVolumeClaim:
-            claimName: pvc-shradha-llmast-gp-engine-unoselab02
+            claimName: pvc-shra-llmast-gp-engine-unoselab02
       restartPolicy: Never
   backoffLimit: 1
 
