--- a/kube/LLM-AST/1-kube-pvc-llm-ast.yml
+++ b/kube/LLM-AST/1-kube-pvc-llm-ast.yml
@@ -22,3 +22,15 @@ spec:
 #   resources:
 #     requests:
 #       storage: 50Gi
+
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: pvc-shra-llmast-gp-engine-unoselab02-03
+# spec:
+#   storageClassName: rook-cephfs-central
+#   accessModes:
+#   - ReadWriteMany
+#   resources:
+#     requests:
+#       storage: 50Gi
